# green-claims-nlp

./: .gitignore  README.md  domain-notes.md  plan.md  pyproject.toml
data/extracted/: passage_counts.csv
data/extracted/sentences_cache/: Eileen_Fisher.pkl  Everlane.pkl  H&M.pkl  Kering.pkl  LOccitane.pkl  LOreal.pkl  Lululemon.pkl  Lush.pkl  Patagonia.pkl  Puma.pkl  Ralph_Lauren.pkl  Reformation.pkl  Sephora.pkl  Shein.pkl  Unilever.pkl  Zara.pkl
data/features/: features.parquet  labeled_embeddings.npy
data/labeled/: ambiguous_passages.jsonl  annotation_guide.md  labeled_passages.jsonl  test_set.jsonl  to_annotate.csv
data/raw/: cosmetic_metadata.csv  fashion_luxury_metadata.csv
data/raw/extracted/: passage_counts.csv  passages.jsonl
data/raw/features/: corpus_embeddings.npy  features.parquet  labeled_embeddings.npy
data/raw/labeled/: ambiguous_passages.jsonl  annotation_guide.md  labeled_passages.jsonl  test_set.jsonl  to_annotate.csv
notebooks/: 01_preprocessing.ipynb  02_annotation.ipynb  03_features.ipynb  04_modeling.ipynb  05_analysis.ipynb  06_evaluation.ipynb
results/: bootstrap_ci.csv  brand_risk_scores.csv  climatebert_predictions.parquet  confusion_matrix.csv  cross_track_agreement_by_brand.csv  cross_track_disagreements.csv  evaluation_metrics.csv  feature_comparison.csv  knn_predictions.parquet  qualitative_examples.md  redflag_rate_by_brand.csv  supply_chain_vs_own_ops.csv  tfidf_predictions.parquet  tfidf_top_words.csv  top_flags_with_neighbors.csv
results/carbon/: carbon_summary.md  emissions.csv
