[project]
name = "green-claims-nlp"
version = "0.1.0"
description = "Detecting greenwashing-risk language in corporate sustainability reports"
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm>=0.0.17",
    "nltk>=3.8",
    "spacy>=3.7",
    "sentence-transformers>=2.6",
    "transformers>=4.40",
    "torch>=2.0",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "textstat>=0.7",
    "codecarbon>=2.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "ipywidgets>=8.1",
    "jupyterlab>=4.0",
]

